tests/expectations/compiler/records/global_shadow_records_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EAST0372008]: record `Token` shadowed by
    --> compiler-test:8:5
     |
   8 |     record Token {
   9 |         owner: address,
  10 |         amount: u64,
  11 |         arg1: u64,
  12 |         arg2: u64,
  13 |     }
     |     ^
"""]
